--- a/coolsite/templates/picture.html
+++ b/coolsite/templates/picture.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Cool Site</title>
+    <title>My Cool Picture</title>
 </head>
 <body>
-    <h1 id="message">{{ msg }}</h1>
-
-    <a id="next-page" href="/picture/">Look at a picture</a>
+    {% if not is_valid %}
+    <h1>couldn't find the requested image, here take this!</h1>
+    {% endif %}
+    <img id="picture-frame" src="{{ image_path }}" alt="{{ image_alt }}">
 </body>
 </html>
